--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.1.3",
         "demi/php-api-client": "~1.0",
         "laravel/lumen-framework": "5.8.*",
-        "vlucas/phpdotenv": "^3.3"
+        "vlucas/phpdotenv": "^3.3",
+        "vluzrmos/tinker": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
