--- a/.env.prod
+++ b/.env.prod
@@ -1,9 +1,9 @@
-APP_NAME=Lumen
+APP_NAME="Fingerprint Client"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=UTC
+APP_TIMEZONE="Asia/Jakarta"
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
@@ -19,4 +19,4 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
 FINGERPRINT_IP=192.168.1.201
-CLOUD_HOST=http://localhost:8000
+CLOUD_HOST=http://visitor.upsistem.id
